fix(weather): vertically align labels next to the wind direction to the end
Using `padding-top` only works when the wind direction is towards west, and not east.

--- a/src/resources/style.sass
+++ b/src/resources/style.sass
@@ -37,9 +37,6 @@ separator
     #weather-humidity, #weather-wind-speed, #weather-wind-direction
       color: #ddd
 
-    #weather-wind-direction
-      padding-top: 6px
-
     #weather-sunrise-icon, #weather-sunset-icon
       font-family: 'Noto Color Emoji'
 
